[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/icon/checkbox_check.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/menu/menu.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=5]

[node name="menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.0
margin_top = -265.5
margin_right = 209.0
margin_bottom = 255.5
script = ExtResource( 4 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.0
margin_top = -260.5
margin_right = 209.0
margin_bottom = 260.5
color = Color( 0.117647, 0.117647, 0.117647, 0.917647 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -10.0
alignment = 1

[node name="MarginContainer8" type="MarginContainer" parent="VBoxContainer2"]
margin_right = 418.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 20 )

[node name="Label2" type="Label" parent="VBoxContainer2"]
margin_top = 24.0
margin_right = 418.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 3 )
text = "Menu"
align = 1
valign = 1

[node name="MarginContainer7" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 88.0
margin_right = 418.0
margin_bottom = 118.0
rect_min_size = Vector2( 80, 30 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 122.0
margin_right = 418.0
margin_bottom = 202.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer2"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 84.0
margin_top = 20.0
margin_right = 192.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )
text = "Sound"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 196.0
margin_right = 250.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3

[node name="sfx_setting" type="Button" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 254.0
margin_right = 334.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
flat = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2/HBoxContainer2/sfx_setting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 338.0
margin_right = 418.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 206.0
margin_right = 418.0
margin_bottom = 286.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer4"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="VBoxContainer2/HBoxContainer4"]
margin_left = 84.0
margin_top = 20.0
margin_right = 219.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )
text = "invert-Y"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer2/HBoxContainer4"]
margin_left = 223.0
margin_right = 250.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3

[node name="invert_y_setting" type="Button" parent="VBoxContainer2/HBoxContainer4"]
margin_left = 254.0
margin_right = 334.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
flat = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2/HBoxContainer4/invert_y_setting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer4"]
margin_left = 338.0
margin_right = 418.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 290.0
margin_right = 418.0
margin_bottom = 300.0
rect_min_size = Vector2( 80, 10 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 304.0
margin_right = 418.0
margin_bottom = 384.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer3"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="resume" type="Button" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 84.0
margin_right = 334.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 80 )
custom_fonts/font = ExtResource( 5 )
text = "Resume"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 338.0
margin_right = 418.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 388.0
margin_right = 418.0
margin_bottom = 413.0
rect_min_size = Vector2( 0, 25 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 417.0
margin_right = 418.0
margin_bottom = 497.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="exit" type="Button" parent="VBoxContainer2/HBoxContainer"]
margin_left = 84.0
margin_right = 334.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 80 )
custom_fonts/font = ExtResource( 5 )
text = "Exit"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer"]
margin_left = 338.0
margin_right = 418.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer2"]
margin_top = 501.0
margin_right = 418.0
margin_bottom = 521.0
rect_min_size = Vector2( 0, 20 )

[connection signal="pressed" from="VBoxContainer2/HBoxContainer2/sfx_setting" to="." method="_on_sfx_setting_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer4/invert_y_setting" to="." method="_on_invert_y_setting_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer3/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/exit" to="." method="_on_exit_pressed"]
